	* FileSetOutput.cc, FileSetOutput.h, commands.cc: use xstring;
	  disable FileSetOutput cloning and assignment.
	* xstring.h: (xstring_ca) new class for allocated strings.
	* FileSetOutput.cc, SFtp.cc: use it.
	* CmdExec.cc, CmdExec.h: use xstring; make unquote return result length.
	* QueueFeeder.cc, QueueFeeder.h, StatusLine.cc: use xstring.
	* SleepJob.cc: use xstring_ca.

2007-04-05  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.h: disable cloning of xstring*.
	* FindJob.cc, Http.cc, keyvalue.cc: avoid unnecessary xstring cloning.
	* FileAccess.h, FileCopy.cc, FileCopy.h, FileSet.cc, FileSet.h,
	  FileSetOutput.cc, Filter.cc, Filter.h, MirrorJob.cc, NetAccess.cc:
	  (FileTimestamp) new struct; use it where needed; submit even
	  imprecise timestamp from MirrorJob to CopyJob.

2007-04-04  Alexander V. Lukyanov <lav@yars.free.net>

	* keyvalue.cc: truncate key and value before reading next record.

2007-04-02  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: use xstring.

2007-03-30  Alexander V. Lukyanov <lav@yars.free.net>

	* ChmodJob.cc, TreatFileJob.cc: FileInfo::name is now xstring -
	  use get().
	* xstring.cc, xstring.h: move get_non_const to xstring0;
	  get rid of AUTO len (unused); make get_space public and make it
	  take granularity as argument; (set_length) new method.
	* Http.cc: (LogErrorText) get rid of unused code.
	* FileSet.h: use xstring_c for symlink.
	* xstring.cc: allow set_allocated(0); simplify truncate.
	* FileCopy.cc, FileCopy.h, FileCopyOutputJob.cc, buffer.cc,
	  buffer.h, buffer_ssl.cc, Resolver.cc: use xstring as base for Buffer;
	  in_buffer is gone; ZeroTerminate is too.
	* xstring.cc, xstring.h: append(char) new method; (borrow) new method.
	* keyvalue.cc, keyvalue.h: use xstring.

2007-03-29  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: (set_substr) new method.
	* FileGlob.cc, FileSet.cc, FileSet.h, MirrorJob.cc, NetAccess.cc,
	  mgetJob.cc, mgetJob.h, rmJob.cc: use xstring in FileInfo.